# chameleon

./: .gitignore  README.md  config.example.conf  pyproject.toml
chameleon/: __init__.py  cli.py  config.py  utils.py
chameleon/core/: __init__.py  effects.py  pipeline.py
chameleon/engine/: mediapipe.py
chameleon/input/: __init__.py  camera.py
chameleon/output/: __init__.py  monitor.py  virtual.py
chameleon/processing/: __init__.py  compositor.py  hwaccel.py  segmentation.py
scripts/: benchmark.sh  export_yolo11_model.py  format.sh  install-virtual-cam.sh  lint.sh
