[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon"
version = "0.0.1"
description = "Virtual webcam with background replacement, blur, and selfie segmentation effects for video conferencing."
authors = [
    {name = "Hoang Tran", email = "thhoang.tr@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3.0",
    "opencv-python>=4.11,<5.0",
    "pyfakewebcam>=0.1.0,<1.0",
    "mediapipe>=0.10,<1.0",
    "inotify-simple>=1.3,<2.0",
    "cmapy>=0.6,<1.0",
    "protobuf>=4.25,<6.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "pydantic>=2.0,<3.0",
    "ultralytics>=8.3,<9.0",
]

[project.scripts]
chameleon = "chameleon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["chameleon"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
